# zoro

./: .gitattributes  .gitignore  .urmzd.oag.yaml  .urmzd.sr.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  THIRD-PARTY-LICENSES.md  cmd_chat.go  cmd_graph.go  cmd_research.go  cmd_search.go  cmd_serve.go  cmd_version.go  docker-compose.yml  go.mod  go.sum  install.sh  justfile  llms.txt  main.go  main_test.go  openapi.yaml  sr.yaml  teasr.toml
.githooks/: .sr-hooks-hash  commit-msg
.github/workflows/: ci.yml  release.yml
api/: .air.toml  Dockerfile  go.mod  go.sum  openapi.yaml
cmd/: chat.go  graph.go  knowledge.go  research.go  search.go  serve.go  version.go
cmd/desktop/: main.go
docs/: rfc001-knowledge-graph.md
frontend/: .gitignore  biome.json  next.config.ts  package-lock.json  package.json  turbo.json
internal/agent/: agent.go
internal/app/: wire.go
internal/config/: config.go  config_test.go  searxng-settings.yml
internal/events/: store.go
internal/graph/: dot.go  dot_test.go
internal/mcp/: server.go  server_test.go
internal/models/: models.go
internal/orchestrator/: orchestrator.go
internal/searcher/: searcher.go  searcher_test.go
scripts/: bench.py  build-searxng.sh  searxng_server.py  test_e2e.py  test_graphiti.py
searxng/: settings.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  commands.rs  config.rs  event_store.rs  knowledge.rs  lib.rs  main.rs  models.rs  ollama.rs  orchestrator.rs  searcher.rs  tools.rs
(+92 files in other folders)
