[package]
name = "zoro"
version = "0.1.0"
edition = "2021"
description = "Privacy-first personal knowledge graph powered by local LLMs"
license = "Apache-2.0"

[lib]
name = "zoro_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "zoro"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
surrealdb = { version = "2", features = ["kv-rocksdb"], default-features = false }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tokio-util = { version = "0.7", features = ["io"] }
